# GPTranslate

./: .gitignore  .prettierignore  CNAME  DEVELOPERS.md  LICENSE  MODULAR_SETTINGS.md  README.md  RELEASE.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js
docs/: index.html
manifests/p/PhilBerndt/GPTranslate/1.1.0/: PhilBerndt.GPTranslate.installer.yaml  PhilBerndt.GPTranslate.locale.en-US.yaml  prepare-winget.ps1
manifests/p/PhilBerndt/GPTranslate/1.2.0/: PhilBerndt.GPTranslate.installer.yaml  PhilBerndt.GPTranslate.locale.en-US.yaml
manifests/p/PhilBerndt/GPTranslate/1.3.1/: PhilBerndt.GPTranslate.installer.yaml  PhilBerndt.GPTranslate.locale.en-US.yaml  PhilBerndt.GPTranslate.yaml
manifests/p/PhilBerndt/GPTranslate/1.3.2/: PhilBerndt.GPTranslate.installer.yaml  PhilBerndt.GPTranslate.locale.en-US.yaml  PhilBerndt.GPTranslate.yaml
manifests/winget/p/PhilBerndt/GPTranslate/1.2.0/: PhilBerndt.GPTranslate.installer.yaml  PhilBerndt.GPTranslate.locale.en-US.yaml
scripts/: README.md  publish-winget.ps1  release.ps1  winget-auto-publish.ps1
src/: app.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  history.rs  lib.rs  main.rs  provider_factory.rs  theme.rs  trans_azure.rs  trans_azure_translator.rs  trans_ollama.rs  trans_openai.rs  translation.rs  tray.rs
src/lib/: AboutTab.svelte  AlternativeTranslations.svelte  ApiConfiguration.svelte  AppBehavior.svelte  AppIcon.svelte  CompactLanguageDropdown.svelte  FavoriteLanguagesManager.svelte  History.svelte  LanguageDropdown.svelte  LanguageSelector.svelte  LanguagesTab.svelte  ModelManagement.svelte  ModelSelector.svelte  NoConfigScreen.svelte  Settings.svelte  SettingsFooter.svelte  SettingsSimple.svelte  TabNavigation.svelte  languages.ts  tauri.ts
src/lib/utils/: configUtils.ts
src/routes/: +layout.svelte  +page.svelte
static/.well-known/appspecific/: com.chrome.devtools.json
