[package]
name = "gptranslate"
version = "2.0.0"
description = "A fast and lightweight AI powered desktop translation application built with Rust and Tauri that provides instant translation between multiple languages with global hotkey support, system tray integration, and a beautiful user interface."
authors = ["Phil Berndt <phil@berndt.no>"]
license = "MIT"
homepage = "https://gptranslate.berndt.no"
repository = "https://github.com/philberndt/gptranslate"
documentation = "https://gptranslate.berndt.no"
keywords = ["translation", "desktop", "tauri", "ai", "clipboard"]
categories = ["gui", "text-processing", "localization"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gptranslate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-autostart = "2.5.0"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-notification = "2.3.1"
tauri-plugin-os = "2.3.1"
tauri-plugin-positioner = "2.3.0"
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-window-state = "2.4.0"
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
dirs = "6.0.0"
anyhow = "1.0.99"
log = "0.4.28"
env_logger = "0.11.8"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
lazy_static = "1.5.0"
url = "2.5.7"
ollama-rs = "0.3.2"
async-trait = "0.1.89"
image = "0.25.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "wingdi"] }
